# ChangeLog for net-ftp/bbftp-client
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Nov 2014; Justin Lecher <jlec@gentoo.org> -bbftp-client-3.2.0.ebuild,
  +bbftp-client-3.2.1.ebuild, metadata.xml:
  Bump EAPI; respect CC; version Bump

  23 Jun 2010; Andreas K. Huettel (dilfridge) <mail@akhuettel.de>
  bbftp-client-3.2.0.ebuild:
  QA fixes

  21 Jul 2008; Bryan Green <bryan.d.green@nasa.gov> ChangeLog:
  added ~x86

*bbftp-client-3.2.0 (01 Dec 2007)

  01 Dec 2007; Bryan Green <bryan.d.green@nasa.gov> ChangeLog:
  initial import
